Added inline CSS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Kevin Luo's User Page</title>
   </head>
   <body>
-      <h1>Kevin Luo's User Page</h1>
+      <h1 style="color:rgb(71, 82, 71);background-color:rgb(80, 80, 214);">Kevin Luo's User Page</h1>
       <img src="images/profilePicture.png" width="200" alt="Profile Picture">
       <div>
         <p>Hi, I'm <i>Kevin</i>, a third year student pursuing a BS in Computer Science at UCSD.</p>
