Added internal CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Kevin Luo's User Page</title>
+    <style>
+      table, th, td {
+        border: 1px solid black;
+      }
+      </style>
   </head>
   <body>
-      <h1 style="color:rgb(71, 82, 71);background-color:rgb(80, 80, 214);">Kevin Luo's User Page</h1>
+      <h1 style="color:rgb(71, 22, 204);background-color:rgb(155, 228, 224);">Kevin Luo's User Page</h1>
       <img src="images/profilePicture.png" width="200" alt="Profile Picture">
       <div>
         <p>Hi, I'm <i>Kevin</i>, a third year student pursuing a BS in Computer Science at UCSD.</p>
@@ -16,10 +21,6 @@
       <div>
         <h3>Some of my projects</h3>
         <table>
-          <colgroup>
-            <col style="background-color:rgb(152, 231, 152)">
-            <col style="background-color:rgb(152, 231, 152)">
-          </colgroup>
           <tr>
             <th>Project</th>
             <th>Description</th>
@@ -30,7 +31,7 @@
           </tr>
           <tr>
             <td><a href="https://github.com/nachiketingle/same_home_diff_hacks/tree/backend">IDK</a></td>
-            <td>Mobile consensus app</td>
+            <td>Mobile decision making app</td>
           </tr>
           <tr>
             <td><a href="https://github.com/kevinyluo/graphs">Graph Visualizer</a></td>
